Thu Oct 23 19:41:00 UTC 2014  Steve Huston  <shuston@riverace.com>

        * tests/Naming_Test.cpp: Fixed data type warning for conversion on
          %d formatting for Mingw.

Tue Oct 21 15:45:59 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/ETCL/ETCL_l.cpp:
          Scoreboard cleanup.

Mon Oct 20 15:37:35 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * ACEXML/common/XMLFilterImpl.h:
        * ACEXML/common/XMLFilterImpl.cpp:
        * ACEXML/parser/parser/Entity_Manager.h:
        * ace/ETCL/ETCL_l.cpp:
        * protocols/ace/RMCast/Flow.h:
        * protocols/ace/RMCast/Flow.cpp:
        * protocols/ace/RMCast/Reassemble.h:
        * protocols/ace/RMCast/Reassemble.cpp:
        * protocols/ace/TMCast/TransactionController.hpp:
          Clean up unused member warnings identified by clang 6.0.

        * bin/PerlACE/Process_Unix.pm:
          increase the valgrind wait factor to accommodate slower machines.

Mon Oct 13 18:59:00 UTC 2014  Steve Huston  <shuston@riverace.com>

        * apps/mkcsregdb/mkcsregdb.cpp: Fix data type error on Windows.

Mon Oct 13 17:24:21 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Added package for killall

Sat Oct 11 21:09:07 UTC 2014  Steve Huston  <shuston@.riverace.com>

        * ace/Process.cpp (ACE_Process_Options::setenv (const ACE_TCHAR *, ...):
          Avoid the secret, magic number buried in ACE_OS::vsprintf() for
          platforms that support ACE_OS::vsnprintf. Allows full use of
          DEFAULT_COMMAND_LINE_BUF_LEN as well as customizing that value
          to a higher size. Thanks to John Lilley for this improvement.

Sat Oct 11 20:45:03 UTC 2014  Steve Huston  <shuston@riverace.com>

        * apps/drwho/File_Manager.cpp: Fixed const-ness compile warning.

Thu Oct  9 16:21:38 UTC 2014  Steve Huston  <shuston@riverace.com>

        * NEWS: Add description of the below changes.

        * ace/OS_NS_stdlib.{h inl cpp}: